# Explainable-AI

./: .gitignore  README.md  pyproject.toml
analysis/: feature_importance.py  saliency_maps.py
analysis/ablations/: train_on_top_k.py
configs/: default.yaml  preprocessing.yaml
configs/data/datasets/: CelebA.yaml
configs/data/transforms/: base.yaml  noop.yaml  train.yaml
configs/experiment/: evaluate_cbm.yaml  evaluate_cbm_top_k.yaml  feature_importance.yaml  predict.yaml  predict_on_train.yaml  saliency.yaml  train.yaml  train_tree.yaml  train_tree_on_top_k.yaml
configs/hydra/: default.yaml
configs/logger/: mlflow.yaml
configs/model/backbone/: resnet.yaml
configs/model/classifier_head/: single_lin_layer.yaml
configs/model/explainable_component/: decision_tree.yaml
ia176/: __main__.py  concept_model.py  decision_tree.py  ia176_typing.py
ia176/callbacks/: __init__.py  cbm_evaluator.py  prediction_saver.py
ia176/data/: __init__.py  data_module.py
ia176/data/datasets/: __init__.py  concept_dataset.py
ia176/data/transforms/: __init__.py  normalize.py
ia176/modeling/backbone/: resnet.py
ia176/modeling/layers/: ffn.py
preprocessing/: normalization_stats.py
